<resources>
    <string name="app_name">Income Outcome</string>
    <string name="app_name_nospace">IncomeOutcome</string>
    <string name="title_activity_new_transaction">Add a Transaction</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_income">Income</string>
    <string name="title_incomeexpenses">Income and Expenses</string>
    <string name="title_overview">Overview</string>
    <string name="title_exportdata">Export Data</string>
    <string name="title_importdata">Import Data</string>
    <string name="title_managebudget">Manage Budget</string>
    <string name="title_managebudgets">Manage Budgets</string>
    <string name="title_managepeople">Manage People</string>
    <string name="title_managecategories">Manage Categories</string>
    <string name="title_newexpense">New Expense</string>
    <string name="title_newincome">New Income</string>
    <string name="title_newtransaction">New Transaction</string>
    <string name="title_addnewbudget">New Budget</string>
    <string name="title_addnewperson">New Person</string>
    <string name="title_addnewcategory">New Category</string>
    <string name="title_selectbudget">Select Budget</string>
    <string name="title_selectperson">Select Person</string>
    <string name="title_selectcategory">Select Category</string>
    <string name="title_selectcurrentbudget">Select Current Budget</string>
    <string name="title_delete">Delete Budget</string>
    <string name="title_edittransaction">Edit Transaction</string>
    <string name="title_edittransactionseries">Edit Transaction Series</string>
    <string name="title_edittransactioninstance">Edit Transaction Instance</string>
    <string name="title_duplicatetransaction">Duplicate Transaction</string>
    <string name="title_editbudget">Edit Budget</string>
    <string name="title_editbudgets">Edit Budgets</string>
    <string name="title_editpeople">Edit People</string>
    <string name="title_editperson">Edit Person</string>
    <string name="title_editcategory">Edit Category</string>
    <string name="title_copytransaction">Copy Transaction</string>
    <string name="title_paidback">These transactions were paid back</string>
    <string name="title_sourcecategory">Category and Source</string>
    <string name="subtitle_transferto">and transfer its transactions to</string>
    <string name="subtitle_or">OR</string>
    <string name="subtitle_blacklist">Altered dates in series • tap to remove</string>
    <string name="title_settings_budgetspeoplecategories">Budgets, People and Categories</string>
    <string name="title_settings_database">Data</string>
    <string name="title_settings_import">Import Data</string>
    <string name="title_settings_export">Export Data</string>
    <string name="title_settings_importexport">Import and Export Data</string>
    <string name="title_settings_defaultcategories">Load default categories</string>
    <string name="title_settrings_deletedata">Delete Data</string>
    <string name="title_settings_deletealldata">Delete ALL Data</string>
    <string name="title_settings_deletetransactions">Delete Budgets and Transactions</string>
    <string name="title_settings_deletepeople">Delete People</string>
    <string name="title_settings_deletecategories">Delete Categories</string>
    <string name="title_settings_importbackup">Import Secret Backup</string>
    <string name="title_settings_about">About</string>
    <string name="title_settings_changelog">Change log</string>
    <string name="title_settings_viewdatabase">View Database</string>
    <string name="title_settings_importmytab">Import MyTab Save File</string>
    <string name="title_settings_fakedata">Add random data (100 transactions)</string>
    <string name="subtitle_settings_defaultcategories">Erase all existing categories and load defaults</string>
    <string name="subtitle_settings_deletealldata">Erase all data permanently \n(excluding exported data)</string>
    <string name="subtitle_settings_deletedata">Select specific data to delete</string>
    <string name="subtitle_settings_import">Erase all current data and import new data</string>
    <string name="subtitle_settings_export">Export all current data to an external file</string>
    <string name="subtitle_settings_importexport">Import new data\nExport current data</string>
    <string name="subtitle_settings_changelog">What\'s new in version %1$s</string>
    <string name="subtitle_settings_viewdatabase">View and edit current database details</string>
    <string name="subtitle_settings_importmytab">Erase all current data and import data from the MyTab app</string>
    <string name="header_cost">Cost</string>
    <string name="header_amount">Payment Amount</string>
    <string name="header_versus_summary">Income Vs. Expenses</string>
    <string name="header_expenses_summary">Expenses Summary</string>
    <string name="header_income_summary">Income Summary</string>
    <string name="header_split_summary">Split Summary</string>
    <string name="header_note">Notes</string>
    <string name="header_add">Added</string>
    <string name="header_change">Changed</string>
    <string name="header_remove">Removed</string>
    <string name="header_fix">Fixes</string>
    <string name="misc_transactoins">Transactions</string>
    <string name="misc_transactoin">Transaction</string>
    <string name="misc_expense">Expense</string>
    <string name="misc_income">Income</string>
    <string name="misc_all">All</string>
    <string name="misc_on"> on </string>
    <string name="misc_onday"> on day </string>
    <string name="misc_me">Me</string>
    <string name="misc_your">Your</string>
    <string name="misc_blank"></string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_Unknown">Unknown</string>
    <string name="placeholder_subtitle">Subtitle</string>
    <string name="placeholder_text">Text</string>
    <string name="placeholder_filename">File Name</string>
    <string name="placeholder_person">Person</string>
    <string name="placeholder_deleted">[DELETED]</string>
    <string name="tt_theircost">%1$s Cost</string>
    <string name="tt_yourcost">Your Cost</string>
    <string name="tt_paid">Paid</string>
    <string name="tt_ipaid">I Paid</string>
    <string name="tt_theypaid">They Paid </string>
    <string name="tt_percentage_split">Split</string>
    <string name="tt_not_split">Not Split</string>
    <string name="tt_showlegend">Legend</string>
    <string name="tt_personname">Person Name</string>
    <string name="tt_budgetname">Budget Title</string>
    <string name="tt_categoryname">Category Title</string>
    <string name="tt_displaydata">Display Data </string>
    <string name="tt_nodata">No Data</string>
    <string name="tt_changelog_nocdata">No Changelog Found</string>
    <string name="tt_nocategories">No Categories Found</string>
    <string name="tt_nosources">No Sources Found</string>
    <string name="tt_nopeople">No Other People Found</string>
    <string name="tt_viewdetails">View Details</string>
    <string name="tt_exportto">*Export to </string>
    <string name="tt_override">Override</string>
    <string name="tt_override_enddate">Override End Date</string>
    <string name="tt_suggestaddbudget">Click here to add a budget</string>
    <string name="tt_permission_writestorage1">Access files request</string>
    <string name="tt_permission_writestorage2">In order for this app to export or import data from an external directory, you must grant it permission to access and modify external files.</string>
    <string name="tt_permission_writestorage3">Access files request</string>
    <string name="tt_permission_writestorage4">To import a MyTab save file, you must grant this app permission to view the external save file</string>
    <string name="tt_add_to_split">Add a person to split this transaction with</string>
    <string name="tt_add_to_category">Add a category</string>
    <string name="tt_loading">Loading</string>
    <string name="tt_enter_title">Enter a Title</string>
    <string name="tt_already_exists">Already exists</string>
    <string name="tt_edited">Edited</string>
    <string name="tt_deleted">Deleted</string>
    <string name="error_transaction_not_found">Transaction not found</string>
    <string name="error_permission_storage">Storage permission not granted</string>
    <string name="error_database_version_newer">Selected database is a newer version than this app supports. Try updating the app.</string>
    <string name="info_title_value">%1$s %2$s</string>
    <string name="info_income_summary_value">Earned %1$s</string>
    <string name="info_expense_summary_value">Earned %1$s</string>
    <string name="info_no_debt">No Debt</string>
    <string name="info_paidby">Paid By %1$s</string>
    <string name="info_paidback_format">Paid %1$s</string>
    <string name="info_nobackup">No Backup Found</string>
    <string name="info_restorebackup">Restore Backup</string>
    <string name="info_backupnotice">Undo Last Import</string>
    <string name="info_description">Description</string>
    <string name="info_nodescription"><i>No Description</i></string>
    <string name="info_source">Source</string>
    <string name="info_nosource"><i>No Source</i></string>
    <string name="info_category">Category</string>
    <string name="info_nocategory"><i>No Category</i></string>
    <string name="info_noname"><i>No Source Name</i></string>
    <string name="info_domwarning">* Some months are limited to 28/29/30 days. The last day of the month will be chosen in these cases.</string>
    <string name="info_delete_person_inuse_warning">* If deleted, any transactions split with this person will be replaced with [DELETED]</string>
    <string name="info_delete_category_inuse_warning">* If deleted, any transactions using this category will have it replaced with [DELETED]</string>
    <string name="info_selected">Selected</string>
    <string name="info_totals">Totals</string>
    <string name="info_transactions">Transactions</string>
    <string name="info_select_category">Select a category</string>
    <string name="info_tran_instance_delete">Removing this date may delete a previously modified transaction!</string>
    <string name="info_tran_repl_original">Restore original instance of this transaction?</string>
    <string name="info_tran_series_override">Remove transaction from series to edit date</string>
    <string name="notice_deletesuccess">Successfully Deleted</string>
    <string name="notice_filedelete">File Deleted</string>
    <string name="item_delimiter">,</string>
    <string name="action_edit_soft">Edit</string>
    <string name="action_delete_soft">Delete</string>
    <string name="action_instance">Only this transaction</string>
    <string name="action_all">All Transactions in series</string>
    <string name="action_ok">OK</string>
    <string name="action_delete">DELETE</string>
    <string name="action_deletetransactions">DELETE TRANSACTIONS</string>
    <string name="action_edit">EDIT</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_select">SELECT</string>
    <string name="time_today">Today</string>
    <string name="time_ondate">On a Date</string>
    <string name="time_never">Never</string>
    <string name="sort">Sort</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_cost">Sort by cost</string>
    <string name="sort_category">Sort by category</string>
    <string name="sort_source">Sort by source</string>
    <string name="sort_paidby">Sort by who paid</string>
    <string name="filter">Filter</string>
    <string name="filter_category">Filter by category</string>
    <string name="filter_source">Filter by source</string>
    <string name="filter_splitwith">Filter by transaction split</string>
</resources>