<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/toolbar_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" >

        <menu>
            <item
                android:id="@+id/toolbar_sort_date"
                android:orderInCategory="0"
                android:title="@string/sort_date" />
            <item
                android:id="@+id/toolbar_sort_cost"
                android:orderInCategory="2"
                android:title="@string/sort_cost" />
            <item
                android:id="@+id/toolbar_sort_category"
                android:orderInCategory="4"
                android:title="@string/sort_category" />
            <item
                android:id="@+id/toolbar_sort_source"
                android:orderInCategory="6"
                android:title="@string/sort_source" />
            <item
                android:id="@+id/toolbar_sort_paidby"
                android:orderInCategory="8"
                android:title="@string/sort_paidby" />
        </menu>
    </item>
</menu>