<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/toolbar_filter"
        android:icon="@drawable/ic_filter_white_24dp"
        android:title="@string/filter"
        app:showAsAction="never"
        android:orderInCategory="2" >

        <menu>
            <item
                android:id="@+id/toolbar_filter_category"
                android:title="@string/filter_category" />
            <item
                android:id="@+id/toolbar_filter_source"
                android:title="@string/filter_source" />
            <item
                android:id="@+id/toolbar_filter_paidby"
                android:title="@string/filter_whopaid" />
            <item
                android:id="@+id/toolbar_filter_splitwith"
                android:title="@string/filter_splitwith" />
        </menu>

        </item>
</menu>