<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/placeholder_title"
        android:id="@+id/textView_dialogppc_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/placeholder_subtitle"
        android:id="@+id/textView_dialogppc_subtitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@+id/textView_dialogppc_title"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_alignParentEnd="true"
       android:layout_below="@+id/textView_dialogppc_subtitle"
       android:layout_marginTop="20dp">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/FlatButtonTheme"
           android:text="@string/action_select"
           android:id="@+id/button_dialogppc_select" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/FlatButtonTheme"
           android:text="@string/action_edit"
           android:id="@+id/button_dialogppc_edit"
           android:visibility="visible" />

   </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FlatButtonTheme"
        android:textColor="@color/red"
        android:text="@string/action_delete"
        android:id="@+id/button_dialogppc_delete"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_dialogppc_subtitle"/>

</RelativeLayout>