<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView_dialogppc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/placeholder_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_dialogppc_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_dialogppc_title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/placeholder_subtitle"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView_dialogppc_subtitle"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dialogppc_select"
            style="@style/FlatButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_select" />

        <Button
            android:id="@+id/button_dialogppc_edit"
            style="@style/FlatButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/button_dialogppc_delete"
        style="@style/FlatButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_dialogppc_subtitle"
        android:layout_marginTop="20dp"
        android:text="@string/action_delete"
        android:textColor="@color/red" />

</RelativeLayout>