<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/placeholder_title"
        android:id="@+id/textView_dialogdr_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/placeholder_subtitle"
        android:id="@+id/textView_dialogdr_subtitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/textView_dialogdr_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FlatButtonTheme"
        android:text="@string/action_ok"
        android:id="@+id/button_dialogdr_positive"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:enabled="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textView_dialogdr_subtitle" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FlatButtonTheme"
        android:text="@string/action_cancel"
        android:id="@+id/button_dialogdr_negative"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/textView_dialogdr_subtitle"
        android:layout_marginTop="20dp" />


    <!--Add new -->

</RelativeLayout>